# GLLearing

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cws/gllearing/: ExampleInstrumentedTest.kt
app/src/androidTest/java/com/three/gllearning/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GLRender.h  Triangle.cpp  Triangle.h  glm_util.h  native-lib.cpp
app/src/main/cpp/geometric/: Triangle.cpp  Triangle.h  bitmap_square.cpp  bitmap_square.h
app/src/main/cpp/lookat/: look_at.cpp  look_at.h
app/src/main/cpp/util/: LogUtil.h  bitmap_util.cpp  bitmap_util.h  gl_util.cpp  gl_util.h
app/src/main/java/com/cws/gllearing/: MainActivity.kt
app/src/main/java/com/three/gllearning/: MainActivity.kt  MyApplication.kt  MyGLRender.kt  MyGLSurfaceView.kt  MyRender.kt
app/src/main/java/com/three/gllearning/camera/: CameraDrawer.kt  CameraHelper.kt
app/src/main/java/com/three/gllearning/geometric/: BitmapSquare.kt  Square.kt  Triangle.kt
app/src/main/java/com/three/gllearning/util/: FileLoader.kt  OpenGLUtil.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: camera_fragment_shader.glsl  camera_vertex_shader.glsl  fragment_shader.glsl  triangle_fragment_shader.glsl  triangle_vertex_shader.glsl  vertex_shader.glsl
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/cws/gllearing/: ExampleUnitTest.kt
app/src/test/java/com/three/gllearning/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
